# authfast

./: .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yaml  pyproject.toml  pytest.ini  run_tests.py
alembic/: env.py
alembic/versions/: 274d23844768_add_verified_boolean_to_user.py  6d0f5f68ae9d_use_plural_names_for_tables.py  6ee4265bd6ed_initial_migration.py
app/: config.py  main.py
app/controllers/: __init__.py  auth.py  email.py  user.py
app/db/: session.py
app/db/dao/: __init__.py  user.py
app/dependencies/: auth.py
app/models/: __init__.py  base.py  users.py
app/params/: __init__.py  email.py
app/routers/: __init__.py  auth.py  email.py  items.py  static.py  users.py
app/scripts/: __init__.py  bootstrap.py
app/static/js/: auth.js
app/templates/: base.html  login.html  register.html
boilerplate/: Dockerfile  docker-compose.yaml  main.py  pyproject.toml
boilerplate/app/: logger.py  main.py
boilerplate/app/dependencies/: auth.py
boilerplate/app/models/: NoOp.py  items.py  users.py
boilerplate/app/routers/: __init__.py  auth.py  items.py  static.py  users.py
boilerplate/models/: NoOp.py  items.py
boilerplate/routers/: __init__.py  health.py  items.py  static.py
tests/: conftest.py  test_auth.py  test_config.py  test_health.py  test_integration.py  test_models.py  test_users.py
