[tool.poetry]
name = "boilerplate"
version = "0.1.0"
description = ""
authors = ["Matt Freeland <mattfreeland78@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.4"}
ruff = "^0.7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
